# chronicle

./: .gitignore  Cargo.toml  package-lock.json  package.json  test.mjs
.github/workflows/: ci.yml  publish.yml
benches/: performance.rs
docs/: rfc-state-item-origins.md
server/src/routes/: states.ts
src/: lib.rs  napi.rs  store.rs  types.rs
src/branches/: manager.rs  mod.rs
src/records/: index.rs  log.rs  mod.rs
src/state/: manager.rs  mod.rs  operations.rs
src/subscriptions/: manager.rs
tests/: branch_state_isolation.rs  disk_scaling.rs  integration.rs  long_store_snapshots.rs  perf_probe.rs  reconstruction_scaling.rs  torn_tail_recovery.rs  tree_integration.rs
tools/: chain-report.py  rebuild-state-index.py  scan-delta-poison.py  trim-records-log.py
ui/src/components/: AppendLogViewer.vue  JsonViewer.vue
ui/src/views/: RecordsView.vue
