[package]
name = "chronicle"
version = "0.1.0"
edition = "2021"
description = "A branchable, time-traveling record store with causation tracking"
license = "MIT"
repository = "https://github.com/anima-research/chronicle"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
napi-bindings = ["napi", "napi-derive"]

[dependencies]
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
rmp-serde = "1.1"
memmap2 = "0.9"
fs2 = "0.4"
lru = "0.12"
crc32fast = "1.3"
tracing = "0.1"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# NAPI-RS for Node.js bindings (optional)
napi = { version = "2", default-features = false, features = ["napi8", "serde-json"], optional = true }
napi-derive = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
proptest = "1.4"
tracing-subscriber = "0.3"

[build-dependencies]
napi-build = "2"

[[bench]]
name = "performance"
harness = false
